<resources>
    <string name="app_name">FlashMe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="intro">Time to get flashed!</string>

    <string name="all_card_count">All card count: </string>
    <string name="adjective_count">Adjective count: </string>
    <string name="adverb_count">Adverb count: </string>
    <string name="noun_count">Noun count: </string>
    <string name="phrase_count">Phrase count: </string>
    <string name="verb_count">Verb count: </string>

    <string name="all_title">All cards</string>
    <string name="adjective_title">Adjs</string>
    <string name="adverb_title">Adverbs</string>
    <string name="noun_title">Nouns</string>
    <string name="phrase_title">Phrases</string>
    <string name="verb_title">Verbs</string>

    <string name="create_card">Create card</string>
    <string name="delete_card">Delete card</string>
    <string name="edit_card">Edit card</string>
    <string name="search_card">Search card</string>
    <string name="search_hint">Search hint poop</string>
    <string name="search_label">Search label</string>

    <string name="english_auto_translation">Auto English</string>
    <string name="swedish_auto_translation">Auto Swedish</string>
    <string name="manual_translation">Manual Input</string>

    <string name="select_translation_mode">Select manual or auto translation</string>

    <string name="english_adjective">Input the English adjective</string>
    <string name="swedish_adjective">Input the Swedish adjective</string>

    <string name="english_adverb">Input the English adverb</string>
    <string name="swedish_adverb">Input the Swedish adverb</string>

    <string name="english_phrase">Input the English phrase</string>
    <string name="swedish_phrase">Input the Swedish phrase</string>

    <string name="english_noun">Input the English noun</string>
    <string name="swedish_noun">Input the Swedish noun</string>
    <string name="article">Input the article for Swedish noun</string>
    <string name="swedish_noun_plural">Input the plural Swedish noun</string>

    <string name="english_verb">Input the English infinitive form</string>
    <string name="swedish_verb">Input the Swedish present form</string>
    <string name="infinitive_form">Input the Swedish infinitive form</string>
    <string name="imperfect_form">Input the Swedish imperfect form</string>
    <string name="perfect_form">Input the Swedish perfect form</string>

    <string name="user_notes_header">Notes</string>
    <string name="user_notes">Input a note for yourself about this word</string>

    <string name="backup_to_email">Input your email address to backup your data to</string>

    <string name="preferences_title">Preferences</string>

</resources>
